--- a/src/HomePage/partners.css
+++ b/src/HomePage/partners.css
@@ -19,7 +19,7 @@
   color: white;
   border-left: 4px solid #c438ef;
   padding-left: 15px;
-  margin-left: 7vh;
+  margin-left: 3vh;
   margin-top: 4px;
   color: white;
   margin-bottom: 50px;
@@ -38,6 +38,9 @@
   padding-right: 12px;
   padding-left: 20px;
 }
+.display-partner-flex{
+  display: flex;
+}
 
 @media only screen and (max-width: 900px) {
   .partners-inner-background {
@@ -47,10 +50,18 @@
     color: white;
     border-left: 4px solid #c438ef;
     padding-left: 15px;
-    margin-left: 1vh;
+    margin-left: -1vh;
     margin-top: 4px;
     color: white;
     margin-bottom: 50px;
     font-family: 'Cinzel';
+}
+.partners-inner-pading {
+  padding-left: 24px;
+  padding-right: 22px;
+}
+.display-partner-flex{
+  display: flex;
+  flex-direction: column;
 }
 }
