--- a/src/HomePage/work.css
+++ b/src/HomePage/work.css
@@ -5,7 +5,7 @@
 .work-heading-outer {
   border-left: 4px solid #c438ef;
     padding-left: 15px;
-    margin-left: 7vh;
+    margin-left: 0vh;
     margin-top: 4px;
     color: white;
     margin-bottom: 38px;
@@ -65,7 +65,7 @@
   .work-content-section-backgroud {
     background-color: #262250;
     height: 345px;
-    width: 243px;
+    width: 280px;
     border-radius: 30px;
     padding: 30px;
     color: white;
@@ -90,4 +90,8 @@
     flex-direction: column;
     justify-content: center;
   }
+  .work-outer {
+    color: white;
+    padding: 60px 23px;
+}
 }
