--- a/src/HomePage/buyForm.css
+++ b/src/HomePage/buyForm.css
@@ -1,8 +1,8 @@
 .buy-card-body {
   background-color: #262250;
-  border-radius: 12px;
+  border-radius: 25px;
   box-shadow: 0 1px 8px rgb(0 0 0 / 30%);
-  padding: 6px 6px 20px 6px;
+  padding: 6px 6px 14px 6px;
   color: white;
   border: 2px solid #58acff;
 }
@@ -18,6 +18,14 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+}
+.sell-button-main p{
+  font-size: 12px;
+
+}
+.buy-hidden-image{
+
+visibility: hidden;
 }
 .sell-button-inner {
   border-radius: 25px;
@@ -43,7 +51,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  padding: 24px 30px;
+  padding: 4px 6px;
 }
 .input-display-sellform {
   display: flex;
@@ -51,10 +59,15 @@
   justify-content: flex-start;
   padding-top: 24px;
 }
+.input-display-sellform label{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 .input-field-sellfrom-inner {
   /* margin-top: 4%; */
   /* background-color: #262250; */
-  margin-top: 4%;
+  margin-top: 1%;
   padding: 6px 18px;
   outline: none;
   color: #ffffff;
@@ -64,11 +77,11 @@
   width: 100%;
 }
 .trading-fee-flex {
-  padding-top: 24px;
-
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  font-size: 12px;
+  padding: 12px 12px;
   align-items: center;
 }
 .trading-fee-value {
@@ -111,10 +124,10 @@
 .swap-button-inner {
   margin-top: 24px;
   padding: 6px 18px;
-  width: 30%;
-  border-radius: 12px;
+  width: 100%;
+  border-radius: 13px;
   color: white;
-
+  box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 10%);
   background: #58acff;
   border: none;
 }
@@ -164,10 +177,11 @@
     width: 100%;
   }
   .trading-fee-flex {
-    padding-top: 24px;
+    padding-top: 11px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
+    font-size: 11px;
     align-items: center;
   }
   .tax-fee-flex {
