--- a/src/HomePage/mileStoneStepper.css
+++ b/src/HomePage/mileStoneStepper.css
@@ -19,6 +19,7 @@
   height: 400px;
   width: 800px;
   border-radius: 30px;
+  box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 10%);
 
   color: white;
 }
@@ -120,6 +121,8 @@
     height: 568px;
     width: 320px;
     border-radius: 30px;
+    box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 10%);
+
     margin-left: 12px;
     color: white;
   }
