--- a/src/HomePage/partners.css
+++ b/src/HomePage/partners.css
@@ -2,6 +2,8 @@
   background-color: #262250;
   border-radius: 30px;
   padding: 30px;
+  box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 10%);
+
 }
 .background-color-each-partner {
   display: flex;
