--- a/src/HomePage/work.css
+++ b/src/HomePage/work.css
@@ -43,6 +43,8 @@
   border-radius: 30px;
   padding: 30px;
   color: white;
+  box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 10%);
+
   text-align: center;
   margin-left: 20px;
 }
@@ -67,6 +69,8 @@
     height: 345px;
     width: 280px;
     border-radius: 30px;
+    box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 10%);
+
     padding: 30px;
     color: white;
     text-align: center;
