--- a/src/Support/gameOne.css
+++ b/src/Support/gameOne.css
@@ -3,23 +3,23 @@
   flex-direction: row;
   align-items: center;
   background-color: #262250;
-  padding: 40px 20px;
+  /* padding: 40px 20px; */
   border-radius: 30px;
 }
 .image-gameOne-outer {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  /* justify-content: space-around; */
 }
-.image-gameOne-inner {
-  border-radius: 12px;
-}
+
 .content-gameOne-section {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   color: white;
   max-width: 536px;
+  padding: 20px 40px;
+
   text-align: justify;
 }
 .content-gameOne-section h3{
@@ -33,7 +33,9 @@
 }
 .image-gameOne-inner {
   height: 300px;
-  width: 400px;
+  width: 100%;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
 }
 @media screen and (max-width: 1100px) {
   .gameOne-main-section {
@@ -41,18 +43,21 @@
     flex-direction: column;
     align-items: center;
     background-color: #262250;
-    padding: 40px 20px;
+    /* padding: 40px 20px; */
     border-radius: 30px;
   }
   .image-gameOne-inner {
-    height: 251px;
-    width: 234px;
+    height: 300px;
+    width: 100%;
+    border-top-left-radius: 30px;
+   border-top-right-radius: 30px;
+   border-bottom-left-radius: 0px;
   }
   .content-gameOne-section {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     max-width: 536px;
-    padding-top: 20px;
+    padding: 16px 24px;
   }
 }
