--- a/src/Dashboard/dashboardHeader.css
+++ b/src/Dashboard/dashboardHeader.css
@@ -86,6 +86,7 @@
     background-color: #e4e6eb;
     border: none;
     padding: 5px 10px;
+    font-family: "Cinzel";
   }
   .dropdown-content {
     display: none;
