--- a/src/Dashboard/welcome.css
+++ b/src/Dashboard/welcome.css
@@ -19,7 +19,7 @@
   align-items: center;
   justify-content: center;
   padding: 12px 0px;
-
+  font-family: "Cinzel";
   /* background-color: rgba(0,0,0,0.1);     */
 }
 
@@ -36,6 +36,7 @@
   display: flex;
   justify-content: center;
   /* border-radius: 20px; */
+  font-family: "Cinzel";
 }
 
 .welcome-images-inner {
