--- a/src/NFT-Dashboard/convertModal.css
+++ b/src/NFT-Dashboard/convertModal.css
@@ -124,13 +124,71 @@
 @media screen and (max-width: 900px) {
   .background-border-converter {
     display: flex;
-    flex-direction: row;
-    width: 95%;
-    padding: 30px 13px;
+    flex-direction: column;
+    width: 100%;
+    padding: 33px 10px;
     /* padding: 50px; */
     background-color: #262250;
     border-radius: 12px;
     /* justify-content: space-around; */
     box-shadow: 0 1px 8px rgb(0 0 0 / 30%);
-  }
+    align-items: center;
+}
+.covertModal-size {
+  max-width: 100% !important;
+}
+.convertModal-coinSelection {
+  font-size: 15px;
+  line-height: 1.8;
+  font-family: monterserat;
+  /* margin-left: 32px; */
+  padding: 6px 12px;
+  background-color: #393469;
+  color: rgb(233, 222, 203);
+  margin-top: 24px;
+  /* border-radius: 12px; */
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
+  margin-left: -16px;
+  outline: none;
+  border: none;
+  width: 100%;
+}
+.amount-field-convertModal {
+  margin-left: 8px;
+  padding: 5px 12px;
+  background-color: #393469;
+  border-radius: 12px;
+  border: none;
+  /* margin: 0px; */
+  width: 100%;
+  outline: none;
+}
+.convertModal-price {
+  display: flex;
+  flex-direction: row;
+  padding: 30px 0px;
+  margin-left: 2px;
+  /* align-items: center; */
+  /* justify-content: center; */
+}
+.convert-coins-label {
+  margin-left: 31px;
+}
+.convert-Coins-field {
+  margin-top: 8px;
+  margin-left: 54px;
+  font-size: 15px;
+  line-height: 1.8;
+  outline: none;
+  font-family: monterserat;
+  /* margin-left: 32px; */
+  padding: 3px 12px;
+  background-color: #393469;
+  /* margin-top: 24px; */
+  border: none;
+  border-radius: 12px;
+  width: 67%;
+}
+
 }
