--- a/src/NFT-Dashboard/newNfts.css
+++ b/src/NFT-Dashboard/newNfts.css
@@ -69,5 +69,6 @@ background-color: rgba(0,0,0,0.1);
         background-color: #ffffff;
         box-shadow: 0 1px 8px rgb(0 0 0 / 30%);
         border: none;
+        font-family: "Cinzel" ;
     }
      }
