--- a/src/Dashboard/roxoPlay.css
+++ b/src/Dashboard/roxoPlay.css
@@ -30,7 +30,7 @@
   padding: 2px 10px;
   margin-top: 24px;
   font-size: 15px;
-  font-family: monterserat;
+  font-family: Nuninto;
   justify-content: space-between;
 }
 .dot {
@@ -48,13 +48,13 @@
 }
 .checkEarnings-inner-button {
   font-size: 15px;
-  font-family: monterserat;
   padding: 6px 18px;
   border-radius: 20px;
   margin-top: 20px;
   color: white;
   font-weight: bold;
   background-color: #58acff;
+  font-family: "Cinzel";
   /* 
     background: rgb(222,153,33);
     background: linear-gradient(90deg, rgba(222,153,33,1) 0%, rgba(243,121,86,1) 100%);    */
@@ -74,6 +74,7 @@
   align-items: center;
   justify-content: center;
   padding: 20px 0px;
+  font-family: "Cinzel";
 }
 .second-card-heading {
   display: flex;
@@ -81,6 +82,7 @@
   align-items: center;
   justify-content: center;
   padding-top: 14%;
+  font-family: "Cinzel";
 }
 
 .roxo-play-heading-style {
@@ -90,6 +92,7 @@
   justify-content: center;
   padding: 40px 0px;
   color: #ffff;
+  font-family: "Cinzel";
 }
 .roxo-play-parent {
   padding: 30px 0px;
