--- a/src/HomePage/gamingNft.css
+++ b/src/HomePage/gamingNft.css
@@ -29,7 +29,6 @@
   padding: 25px;
   border-radius: 30px;
   box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 10%);
-
   overflow: hidden;
 }
 
@@ -76,6 +75,7 @@
   align-items: center;
   justify-content: center;
   padding: 12px 30px;
+  font-family: "Cinzel" ;
   /* background-color: rgba(0,0,0,0.1);   */
 }
 .newNftSlider-view-button-outer {
@@ -113,7 +113,7 @@
   background-color: #1c1e21;
   position: absolute;
   margin-top: 40px;
-  margin-left: 50%;
+  margin-left: 20%;
   width: 20px;
   height: 50px;
   opacity: 0;
@@ -124,7 +124,7 @@
   color: honeydew;
   background-color: #1c1e21;
   position: absolute;
-  margin-top: 40px;
+  margin-top: 50px;
   opacity: 0;
   margin-left: 50%;
   width: 20px;
@@ -135,7 +135,7 @@
 .gaming-nft-slider:hover > .tes-btn11 {
   position: absolute;
   margin-top: 40px;
-  margin-left: 5%;
+  margin-left: -1%;
   width: 50px;
   height: 50px;
   border-radius: 25px;
@@ -147,7 +147,7 @@
 .gaming-nft-slider:hover > .tes-btnSecond {
   position: absolute;
   margin-top: 40px;
-  margin-left: 50%;
+  margin-left: 52%;
   width: 50px;
   height: 50px;
   border-radius: 25px;
@@ -207,7 +207,7 @@
     padding-left: 31px;
     padding-right: 40px;
     padding-bottom: 40px;
-}
+  }
   .gaming-nft-heading {
     border-left: 4px solid #c438ef;
     padding-left: 15px;
@@ -284,5 +284,5 @@
     color: white;
     width: 316px;
     padding: 30px 0px;
-}
+  }
 }
