--- a/src/HomePage/login.css
+++ b/src/HomePage/login.css
@@ -1,13 +1,14 @@
 .login-fields-heading {
   border-radius: 25px;
-  color: #ffe600;
+  color: #58acff;
   width: 246px;
   height: 40px;
-  border: 1px solid #ffe600;
+  border: 1px solid #58acff;;
   text-align: center;
 }
 .login-fields-heading-outer {
   padding-top: 20px;
+  font-family: "Cinzel";
 }
 .modal-padding {
   padding-left: 46px;
@@ -67,6 +68,8 @@
   align-items: center;
   font-weight: 600;
   color: white;
+  font-family: Nuninto;
+
 }
 .text-login-second {
   margin: 10px;
@@ -79,6 +82,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: Nuninto;
 
   color: white;
 }
@@ -123,8 +127,8 @@
   padding: 6px 18px;
 
   width: 50%;
-  border-radius: 12px;
-  background-color: #ffe600;
+  border-radius: 25px;
+  background: #58acff;
 
   border: none;
 }
@@ -151,6 +155,7 @@
   color: white;
   background: none;
   border: none;
+  font-family: "Cinzel";
 }
 
 @media screen and (max-width: 900px) {
