--- a/src/NFT-Dashboard/depositeModal.css
+++ b/src/NFT-Dashboard/depositeModal.css
@@ -122,3 +122,26 @@
 .scan-icon-depositModal svg {
   color: white;
 }
+
+
+@media screen and (max-width: 900px) {
+  .modal-size-deposit {
+    max-width: 100% !important;
+  }
+  .depositModal-makeSure {
+    padding: 8px 34px;
+  }
+  .deposit-network {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 36px;
+    padding-left: 0%;
+  }
+  .network-field {
+    font-size: 12px;
+    line-height: 1.8;
+    font-family: monterserat;
+    outline: none;
+  }
+}
