--- a/src/NFT-Dashboard/withDrawModal.css
+++ b/src/NFT-Dashboard/withDrawModal.css
@@ -109,3 +109,20 @@ width: 64%;
     max-width: 56.5% !important;
 
 }
+
+
+@media screen and (max-width: 900px) {
+    .modal-size-withDraw {
+        max-width: 100% !important;
+      }
+      .withDrawModal-button-style {
+        padding: 6px 4px;
+        /* margin: 4% 0; */
+        color: white;
+        border-radius: 12px;
+        width: 50%;
+        background-color: #393469;
+        border: none;
+        box-shadow: 0 1px 8px rgb(0 0 0 / 30%);
+      }
+  }
